syntax = "proto3";
package embedder;

message UserInterests {
  string user_id = 1;
  repeated string interests = 2;
}

message UserVector {
  string user_id = 1;
  repeated float vector = 2;
}

message EmbedRequest {
  repeated UserInterests items = 1;
}

message EmbedReply {
  repeated UserVector items = 1;
}

service Embedder {
  rpc Embed (EmbedRequest) returns (EmbedReply);
}
